--- a/FDWaveformView/Base.lproj/Main.storyboard
+++ b/FDWaveformView/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wPy-LY-uJK" customClass="FDWaveformView">
-                                <rect key="frame" x="0.0" y="217" width="320" height="115"/>
+                                <rect key="frame" x="0.0" y="218" width="321" height="115"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -25,7 +25,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QAk-UM-QR2">
-                                <rect key="frame" x="0.0" y="340" width="320" height="30"/>
+                                <rect key="frame" x="0.0" y="341" width="321" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.95686280729999995" green="0.85882359740000003" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
                                 <constraints>
@@ -39,18 +39,56 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HwO-T0-ya6">
-                                <rect key="frame" x="0.0" y="20" width="320" height="189"/>
+                                <rect key="frame" x="0.0" y="20" width="321" height="190"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L6K-S8-TqR">
-                                <rect key="frame" x="0.0" y="378" width="320" height="190"/>
+                                <rect key="frame" x="0.0" y="379" width="321" height="189"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6nS-uY-8MT">
+                                        <rect key="frame" x="0.0" y="4" width="321" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.95686280729999995" green="0.85882359740000003" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="ccz-Dd-PWI"/>
+                                        </constraints>
+                                        <state key="normal" title="Zoom in">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="doZoomIn" destination="vXZ-lx-hvc" eventType="touchUpInside" id="87L-US-fct"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9hJ-tI-0Qm">
+                                        <rect key="frame" x="0.0" y="46" width="321" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.95686280729999995" green="0.85882359740000003" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Vtc-yh-lhR"/>
+                                        </constraints>
+                                        <state key="normal" title="Zoom out">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="doZoomOut" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Jg3-kI-IUy"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="9hJ-tI-0Qm" firstAttribute="leading" secondItem="L6K-S8-TqR" secondAttribute="leading" id="AAa-Rg-Sr2"/>
+                                    <constraint firstAttribute="trailing" secondItem="9hJ-tI-0Qm" secondAttribute="trailing" id="FVJ-uu-zcp"/>
+                                    <constraint firstItem="6nS-uY-8MT" firstAttribute="leading" secondItem="L6K-S8-TqR" secondAttribute="leading" id="G3T-Df-9bv"/>
+                                    <constraint firstItem="9hJ-tI-0Qm" firstAttribute="top" secondItem="6nS-uY-8MT" secondAttribute="bottom" constant="12" id="Tsw-Ym-jbW"/>
+                                    <constraint firstAttribute="trailing" secondItem="6nS-uY-8MT" secondAttribute="trailing" id="jYY-yq-bUt"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.68627452850000004" green="0.87450987099999999" blue="0.8980392814" alpha="1" colorSpace="deviceRGB"/>
                         <constraints>
+                            <constraint firstItem="6nS-uY-8MT" firstAttribute="top" secondItem="QAk-UM-QR2" secondAttribute="bottom" constant="12" id="ALC-kU-gfF"/>
                             <constraint firstItem="wPy-LY-uJK" firstAttribute="leading" secondItem="L6K-S8-TqR" secondAttribute="leading" id="KPA-83-kCw"/>
                             <constraint firstItem="wPy-LY-uJK" firstAttribute="leading" secondItem="HwO-T0-ya6" secondAttribute="leading" id="Lxo-b2-geo"/>
                             <constraint firstItem="wPy-LY-uJK" firstAttribute="trailing" secondItem="L6K-S8-TqR" secondAttribute="trailing" id="OIg-E5-EZ4"/>
