--- a/FDWaveformView/Base.lproj/Main.storyboard
+++ b/FDWaveformView/Base.lproj/Main.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="14A329f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A343f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,9 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wPy-LY-uJK" customClass="FDWaveformView">
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wPy-LY-uJK" customClass="FDWaveformView">
                                 <rect key="frame" x="-1" y="233" width="321" height="123"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="color" keyPath="wavesColor">
@@ -26,9 +27,8 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <button appearanceType="aqua" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X4M-0m-agr">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X4M-0m-agr">
                                 <rect key="frame" x="-1" y="20" width="96" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.9882352941176471" green="0.37647058823529411" blue="0.25882352941176467" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Load AAC">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -38,9 +38,8 @@
                                     <action selector="doLoadAAC" destination="vXZ-lx-hvc" eventType="touchUpInside" id="8Tg-5p-aFJ"/>
                                 </connections>
                             </button>
-                            <button appearanceType="aqua" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h7t-dg-GCb">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h7t-dg-GCb">
                                 <rect key="frame" x="103" y="20" width="95" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.98823529409999999" green="0.37647058820000001" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Load MP3">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -50,9 +49,8 @@
                                     <action selector="doLoadMP3" destination="vXZ-lx-hvc" eventType="touchUpInside" id="pJl-2A-05Y"/>
                                 </connections>
                             </button>
-                            <button appearanceType="aqua" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nef-Qp-sxn">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nef-Qp-sxn">
                                 <rect key="frame" x="206" y="20" width="114" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.98823529409999999" green="0.37647058820000001" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Load OGG">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -62,9 +60,8 @@
                                     <action selector="doLoadOGG" destination="vXZ-lx-hvc" eventType="touchUpInside" id="FJu-PS-P3c"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6nS-uY-8MT">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6nS-uY-8MT">
                                 <rect key="frame" x="0.0" y="106" width="320" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.93333333333333335" green="0.90196078431372551" blue="0.3411764705882353" alpha="1" colorSpace="deviceRGB"/>
                                 <state key="normal" title="Zoom in">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -74,9 +71,8 @@
                                     <action selector="doZoomIn" destination="vXZ-lx-hvc" eventType="touchUpInside" id="87L-US-fct"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9hJ-tI-0Qm">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9hJ-tI-0Qm">
                                 <rect key="frame" x="-1" y="149" width="321" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.93333333333333335" green="0.90196078431372551" blue="0.3411764705882353" alpha="1" colorSpace="deviceRGB"/>
                                 <state key="normal" title="Zoom out">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -86,9 +82,8 @@
                                     <action selector="doZoomOut" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Jg3-kI-IUy"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QAk-UM-QR2">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QAk-UM-QR2">
                                 <rect key="frame" x="0.0" y="63" width="320" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.93333333330000001" green="0.90196078430000004" blue="0.3411764706" alpha="1" colorSpace="deviceRGB"/>
                                 <state key="normal" title="Randomly set play progress">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -98,9 +93,8 @@
                                     <action selector="doAnimation" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Jao-Oh-4mr"/>
                                 </connections>
                             </button>
-                            <button appearanceType="aqua" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xMU-Jn-XBZ">
-                                <rect key="frame" x="-1" y="190" width="321" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xMU-Jn-XBZ">
+                                <rect key="frame" x="-1" y="192" width="321" height="33"/>
                                 <color key="backgroundColor" red="0.93333333330000001" green="0.90196078430000004" blue="0.3411764706" alpha="1" colorSpace="deviceRGB"/>
                                 <state key="normal" title="Run performance profiling">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -112,6 +106,30 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="deviceRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="6nS-uY-8MT" secondAttribute="trailing" constant="-16" id="0vs-ux-ijL"/>
+                            <constraint firstItem="xMU-Jn-XBZ" firstAttribute="top" secondItem="9hJ-tI-0Qm" secondAttribute="bottom" constant="8" id="1ea-Ws-pEk"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wPy-LY-uJK" secondAttribute="trailing" id="2Oo-RB-6y8"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9hJ-tI-0Qm" secondAttribute="trailing" constant="-16" id="2gR-eS-J8c"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="nef-Qp-sxn" secondAttribute="trailing" constant="-16" id="7Og-3v-n9d"/>
+                            <constraint firstItem="6nS-uY-8MT" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="Nny-Q1-G7z"/>
+                            <constraint firstItem="X4M-0m-agr" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-17" id="PvG-KA-WNg"/>
+                            <constraint firstItem="q8T-hR-ehe" firstAttribute="top" secondItem="wPy-LY-uJK" secondAttribute="bottom" id="THB-Me-9bz"/>
+                            <constraint firstItem="9hJ-tI-0Qm" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-17" id="VAG-sD-VCS"/>
+                            <constraint firstItem="nef-Qp-sxn" firstAttribute="width" secondItem="X4M-0m-agr" secondAttribute="width" id="XOR-zK-cjs"/>
+                            <constraint firstItem="9hJ-tI-0Qm" firstAttribute="top" secondItem="6nS-uY-8MT" secondAttribute="bottom" constant="8" id="ZZR-35-LNy"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="QAk-UM-QR2" secondAttribute="trailing" constant="-16" id="dln-zz-sSk"/>
+                            <constraint firstItem="nef-Qp-sxn" firstAttribute="width" secondItem="h7t-dg-GCb" secondAttribute="width" id="g72-ER-E8U"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xMU-Jn-XBZ" secondAttribute="trailing" constant="-16" id="gPl-Bp-meH"/>
+                            <constraint firstItem="h7t-dg-GCb" firstAttribute="leading" secondItem="X4M-0m-agr" secondAttribute="trailing" constant="8" id="lf3-2e-h8w"/>
+                            <constraint firstItem="6nS-uY-8MT" firstAttribute="top" secondItem="QAk-UM-QR2" secondAttribute="bottom" constant="8" id="s9T-ro-B5C"/>
+                            <constraint firstItem="QAk-UM-QR2" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="vut-D7-0J4"/>
+                            <constraint firstItem="wPy-LY-uJK" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="wH8-7w-rXG"/>
+                            <constraint firstItem="wPy-LY-uJK" firstAttribute="top" secondItem="xMU-Jn-XBZ" secondAttribute="bottom" constant="8" id="wUw-N2-aXe"/>
+                            <constraint firstItem="xMU-Jn-XBZ" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-17" id="wyD-8P-wpP"/>
+                            <constraint firstItem="nef-Qp-sxn" firstAttribute="leading" secondItem="h7t-dg-GCb" secondAttribute="trailing" constant="8" id="yfM-x0-c1n"/>
+                            <constraint firstItem="QAk-UM-QR2" firstAttribute="top" secondItem="X4M-0m-agr" secondAttribute="bottom" constant="8" id="zJb-lc-qjA"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="playButton" destination="kh9-bI-dsS" id="ot4-17-fpG"/>
